fix text alignment of connect section

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -209,7 +209,7 @@ http://www.Mkrtchyan.zz.mu
   width: 100%;
   background: url("../assets/images/team_connect_bg.png") no-repeat;
   background-size: cover;
-  text-align: center;
+  text-align: left;
   position: relative;
   padding-top: 160px;
   padding-bottom: 50px;
